Added package.json file at the root of the project

--- a/backend/package.json
+++ b/backend/package.json
@@ -1,12 +1,11 @@
 {
+  "name": "backend",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
   "scripts": {
-    "start": "node app.js"
-  },
-  "dependencies": {
-    "body-parser": "^1.20.2",
-    "cors": "^2.8.5",
-    "dotenv": "^16.0.3",
-    "express": "^4.18.2",
-    "nodemailer": "^6.9.2"
+    "start": "node app.js",
+    "start:development": "node app.js",
+    "start:production": "node app.js"
   }
 }
