Double checked for the pakcage.json files in all directories and fixed again app.js file

--- a/backend/package.json
+++ b/backend/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "sequelize": "sequelize",
     "sequelize-cli": "sequelize-cli",
-    "start": "node app.js",
+    "start": "nodemon app.js",
     "start:development": "node app.js",
     "start:production": "node app.js",
     "db:create": "npx sequelize-cli db:create",
