--- a/backend/package.json
+++ b/backend/package.json
@@ -39,10 +39,10 @@
     "sequelize": "^6.29.3",
     "sequelize-cli": "^6.6.0",
     "body-parser": "1.20.2",
-    "nodemailer": "6.9.3"
+    "nodemailer": "6.9.3",
+    "nodemon": "^2.0.21"
   },
   "devDependencies": {
     "dotenv-cli": "^7.1.0",
-    "nodemon": "^2.0.21"
   }
 }
