--- a/backend/package.json
+++ b/backend/package.json
@@ -39,7 +39,7 @@
     "sequelize": "^6.29.3",
     "sequelize-cli": "^6.6.0",
     "body-parser": "1.20.2",
-    "nodemailer": "6.9.3",
+    "nodemailer": "^6.9.2",
     "nodemon": "^2.0.21"
   },
   "devDependencies": {
