--- a/frontend/src/data/projects.json
+++ b/frontend/src/data/projects.json
@@ -1,4 +1,5 @@
 [
   {"id": 1, "title": "Soccer Players", "image": "images/projects/soccer-players.jpg", "url": "https://soccer-players.onrender.com", "gif": "/images/projects/soccer-players-recording.gif"},
-  {"id": 2, "title": "NYC Permit Practice", "image": "images/projects/nyc-dmv-practice.jpg", "url": "https://nyc-practice-permit-test.onrender.com/", "gif": "/images/projects/nyc-dmv-practice.gif"}
+  {"id": 2, "title": "NYC Permit Practice", "image": "images/projects/nyc-dmv-practice.jpg", "url": "https://nyc-practice-permit-test.onrender.com/", "gif": "/images/projects/nyc-dmv-practice.gif"},
+  {"id": 3, "title": "Manamusic", "image": "images/projects/manamusic.jpg", "url": "https://manamusic.onrender.com/", "gif": "/images/projects/manamusic.gif"}
 ]
